--- a/roles/python-server-metrics/tasks/main.yml
+++ b/roles/python-server-metrics/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
 - name: server-metrics - install python-dev
-  apt: name=python-dev update_cache=yes cache_valid_time=3600
+  yum: name=python-devel state=present
 
 - name: server-metrics - install pip
-  apt: name=python-pip
+  yum: name=python-pip state=present
 
 - name: server-metrics - update pip
   pip: name=pip extra_args="--upgrade"
 
 - name: server-metrics - install git
-  apt: name=git-core
+  yum: name=git-core state=present
 
 - name: server-metrics - clone repo
   git: repo=https://github.com/bitmazk/python-server-metrics-scripts dest=/opt/python-server-metrics-scripts
